2019-02-13  Marc A. Smith  <marc.smith@quantum.com>

	install.sh: bail on any error with set -e; initramfs_init: don't start rc.mdraid and rc.lvm2 when using the ESOS ISO; iso_installer.sh: bail on any error, and run bash if failure occurs on select scripts

	rc.0: updates to handle the ESOS ISO (don't attempt to do things that we can't when booting off the ISO); rc.2: disable loading the Switchtec module at boot (for now); initramfs_init: don't start SCST when we're running the ISO; rc.serial: hide output from grep; iso_installer.sh: added a hook for installation extras/customization

2019-02-10  Marc A. Smith  <marc.smith@quantum.com>

	keep the cryptography Python module at version 2.4.2 to avoid printed warnings when using; added the iso_installer.sh script to facilitate installing ESOS from an ISO; updated init/rc scripts to handle the ESOS ISO properly; updated the install.sh script for ESOS ISO

2019-02-08  Marc A. Smith  <marc.smith@quantum.com>

	clean the *.iso file

	updated the initramfs script and install.sh to support the ESOS ISO

2019-02-07  Marc A. Smith  <marc.smith@quantum.com>

	Python.chroot: install paramiko via pip3 (and deps)

2019-02-06  Marc A. Smith  <marc.smith@quantum.com>

	use the -f flag for gzip; updated build/compile info messages in esos_kernels.chroot to avoid conflicting with log parser

2019-02-05  Marc A. Smith  <marc.smith@quantum.com>

	updated handling of '--with-customize_dir' in Makefile.in and configure.ac; fixed package name handling in install.sh

	in the generated chroot_build.sh script, we need to capture the exit status of the chroot command and exit the script using that value to catch build errors, otherwise we exit with the status from 'make post_chroot'; added build dep to Python.chroot (at least one third-party module requires libuuid)

2019-02-04  Marc A. Smith  <marc.smith@quantum.com>

	rc.rpcagent SSL key length fix (the real fix, thanks Lars)
